Add Character Limit so that  table dont mees out and make some minor improvement

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
                             <label for="Normal" class="text-gray-700">Normal</label>
                         </div>
                     </div>
-                    <textarea id="addNote" rows="3" class="w-full p-2 mb-4 border rounded"
+                    <textarea id="addNote" rows="3" class="w-full p-2  border rounded"
                         placeholder="Any Additional Note ?"></textarea>
+                        <div class="text-xs font-bold w-full mb-4 text-right">
+                            <label for="charLimit" id="charLimit" >0/30</label>
+                        </div>
                     <button id="submit" type="submit"
                         class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600">
                         Add Item
