--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <link href="https://api.fontshare.com/v2/css?f[]=telma@300,400,500,700&display=swap" rel="stylesheet" />
 </head>
 
-<body class="flex bg-white flex-col overflow-visible lg:flex-row lg:overflow-hidden md:flex-col">
-  <div id="main1" class=" h-full md:w-full md:h-full md:flex md:flex-col lg:w-1/2 lg:h-full">
+<body class="m-2 flex bg-white flex-col overflow-visible lg:flex-row lg:overflow-hidden md:flex-col">
+  <div id="main1" class=" h-full  md:w-full md:h-full md:flex md:flex-col lg:w-1/2 lg:h-full">
     <div class=" bg-transparent flex flex-wrap md:w-full md:h-2/3 xl:w-2/3 xl:h-1/5" id="notifi">
     </div>
-    <div class=" w-full h-full flex items-start justify-center md: h-full w-full ">
+    <div class=" w-full h-full flex items-start justify-center md: h-full w-full lg:ml-10 lg:mb-32 xl:ml-0 xl:mb-0">
       <div class="p-8 rounded-lg bg-gray-100 drop-shadow-md md:w-3/5 lg:w-full xl:w-2/3">
         <form class="">
           <div class="logo text-center mb-6 flex gap-4 justify-center">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-  <div id="list-con" class="w-full h-full flex justify-center items-center">
+  <div id="list-con" class="w-full h-full flex justify-center items-center mt-10 lg:mt-0">
     <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full xl:w-4/5 h-3/4 lg: w-4/5 md:w-3/4">
       <div id="srch-bar" class="relative flex items-center my-2 md:mx-5">
         <input id="srch-input" type="text" placeholder="Filter Items" class="w-full p-2 border rounded" />
@@ -63,9 +63,9 @@
             Clear All
           </button>
         </div>
-        <div class="relative overflow-auto max-h-[550px] w-full">
+        <div class="p-0 m-0 relative overflow-auto max-h-[550px] w-full ">
           <table class="w-full border-collapse ">
-            <thead >
+            <thead class="sticky top-0 z-10" >
               <tr class="bg-gray-300 text-left">
                 <th class="p-2">Name</th>
                 <th class="p-2">Priority</th>
