--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
               <!-- Table rows will be dynamically added here -->
             </tbody>
           </table>
+          <div class=" w-full h-40 flex justify-center items-center " id="no-items">
+              <h1 class="bg-gray-200 text-lg text-red-600 font-semibold underline p-5 shadow-md rounded text-center">No Items Found !</h1>
+          </div>
         </div>
       </div>
     </div>
