--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div id="list-con" class="w-full h-full flex justify-center items-center mt-10 lg:mt-0">
-    <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full xl:w-4/5 h-3/4 lg: w-4/5 md:w-3/4">
+    <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full mb-20 xl:w-4/5 h-3/4 lg: w-4/5 md:w-3/4">
       <div id="srch-bar" class="relative flex items-center my-2 md:mx-5">
         <input id="srch-input" type="text" placeholder="Filter Items" class="w-full p-2 border rounded" />
         <i class="absolute right-5 bx bx-search-alt text-gray-600 ml-2 text-lg"></i>
@@ -85,6 +85,9 @@
       </div>
     </div>
   </div>
+  <footer class="z-10 fixed bottom-0 left-0 w-full bg-gray-800 text-gray-200 p-2.5 text-center shadow-md lg:p-1.5">
+    <h3 class="text-sm ">Built from scratch by <a href="https://www.linkedin.com/in/hashirali5/" class="text-yellow-400 font-semibold hover:text-yellow-300 hover:underline">HASHIR ALI</a></h3>
+  </footer>
 </body>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="script.js"></script>
