Add Credits to projects further enchance the visuals

--- a/index.html
+++ b/index.html
@@ -85,8 +85,14 @@
       </div>
     </div>
   </div>
-  <footer class="z-10 fixed bottom-0 left-0 w-full bg-gray-800 text-gray-200 p-2.5 text-center shadow-md lg:p-1.5">
-    <h3 class="text-sm ">Built from scratch by <a href="https://www.linkedin.com/in/hashirali5/" class="text-yellow-400 font-semibold hover:text-yellow-300 hover:underline">HASHIR ALI</a></h3>
+  <footer class="leading-3 z-10 fixed bottom-0 left-0 w-full bg-gray-800 text-gray-200 p-2.5 text-center shadow-md lg:p-1.5">
+      <h3 class="text-sm leading-3">
+        Built from scratch by <a href="https://www.linkedin.com/in/hashirali5/ mailto:HashirAliAkbar5k@gmail.com"
+          class="text-yellow-400 font-semibold hover:text-yellow-300 underline">HASHIR ALI</a>
+      </h3>
+      <a href="mailto:HashirAliAkbar5k@gmail.com" class=" leading-3text-gray-400 text-sm hover:text-gray-300" aria-label="Email">
+        <label>HashirAliAkbar5k@gmail.com</label>
+      </a>
   </footer>
 </body>
 <script src="https://cdn.tailwindcss.com"></script>
