fixed the search icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" href="checklist.png" type="image/x-icon" />
   <link href="https://api.fontshare.com/v2/css?f[]=supreme@200,500&f[]=chillax@300,400,500&display=swap"
     rel="stylesheet" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body class="m-2 flex bg-white flex-col overflow-visible lg:flex-row lg:overflow-hidden md:flex-col">
