Change the postion of List Con.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <div id="list-con" class="w-full h-full flex justify-center items-center mt-10 lg:mt-0">
+  <div id="list-con" class="w-full h-full flex justify-start items-start mt-10 lg:mt-40">
     <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full mb-20 xl:w-4/5 h-3/4 lg: w-4/5 md:w-3/4">
       <div id="srch-bar" class="relative flex items-center my-2 md:mx-5">
         <input id="srch-input" type="text" placeholder="Filter Items" class="w-full p-2 border rounded" />
