--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class=" bg-transparent flex flex-wrap md:w-full md:h-2/3 xl:w-2/3 xl:h-1/5" id="notifi">
     </div>
     <div class=" w-full h-full flex items-start justify-center md: h-full w-full lg:ml-10 lg:mb-32 xl:ml-0 xl:mb-0">
-      <div class="p-8 rounded-lg bg-gray-100 drop-shadow-md md:w-3/5 lg:w-full xl:w-2/3">
+      <div class="p-8 rounded-lg bg-gray-100 drop-shadow-md md:w-3/5  lg:w-full xl:w-2/3">
         <form class="">
           <div class="logo text-center mb-6 flex gap-4 justify-center">
             <h1 class="text-5xl text-gray-700">Shopping List</h1>
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <div id="list-con" class="w-full h-full flex justify-start items-start mt-10 lg:mt-40">
+  <div id="list-con" class="w-full h-full flex justify-start items-start mt-10 md:justify-center  lg:mt-0 lg:justify-center lg:items-center xl:mt-40 xl:items-start xl:justify-start">
     <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full mb-20 xl:w-4/5 h-3/4 lg: w-4/5 md:w-3/4">
       <div id="srch-bar" class="relative flex items-center my-2 md:mx-5">
         <input id="srch-input" type="text" placeholder="Filter Items" class="w-full p-2 border rounded" />
