--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shopping List</title>
+  <link rel="stylesheet" href="buildcss.css">
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="checklist.png" type="image/x-icon" />
   <link href="https://api.fontshare.com/v2/css?f[]=supreme@200,500&f[]=chillax@300,400,500&display=swap"
@@ -17,7 +18,7 @@
   <div id="main1" class=" h-full  md:w-full md:h-full md:flex md:flex-col lg:w-1/2 lg:h-full">
     <div class=" bg-transparent flex flex-wrap md:w-full md:h-2/3 xl:w-2/3 xl:h-1/5" id="notifi">
     </div>
-    <div class=" w-full h-full flex items-start justify-center md: h-full w-full lg:ml-10 lg:mb-32 xl:ml-0 xl:mb-0">
+    <div class=" w-full h-full flex items-start justify-center  lg:ml-10 lg:mb-32 xl:ml-0 xl:mb-0">
       <div class="p-8 rounded-lg bg-gray-100 drop-shadow-md md:w-3/5  lg:w-full xl:w-2/3">
         <form class="">
           <div class="logo text-center mb-6 flex gap-4 justify-center">
@@ -53,7 +54,7 @@
     </div>
   </div>
   <div id="list-con" class="w-full h-full flex justify-start items-start mt-10 md:justify-center  lg:mt-0 lg:justify-center lg:items-center xl:mt-40 xl:items-start xl:justify-start">
-    <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full mb-20 xl:w-4/5 h-3/4 lg: w-4/5 md:w-3/4">
+    <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full mb-20  md:w-3/4">
       <div id="srch-bar" class="relative flex items-center my-2 md:mx-5">
         <input id="srch-input" type="text" placeholder="Filter Items" class="w-full p-2 border rounded" />
         <i id="srch-ico" class="absolute right-5 bx bx-search-alt text-gray-600 ml-2 text-lg"></i>
@@ -99,7 +100,6 @@
       </a>
   </footer>
 </body>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="script.js"></script>
+<script defer src="script.js"></script>
 
 </html>
