Fix The UI issue of Aligning Conatianers

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body class="m-2 flex bg-white flex-col overflow-visible lg:flex-row lg:overflow-hidden md:flex-col">
-  <div id="main1" class=" h-full  md:w-full md:h-full md:flex md:flex-col lg:w-1/2 lg:h-full">
-    <div class=" bg-transparent flex flex-wrap md:w-full md:h-2/3 xl:w-2/3 xl:h-1/5" id="notifi">
+  <div id="main1" class=" h-full flex flex-col md:w-full lg:w-1/2">
+    <div class="z-10 bg-transparent flex flex-wrap md:w-1/2 md:h-2/3 lg:h-24 lg:w-full xl:w-2/3 xl:h-1/6" id="notifi">
     </div>
-    <div class=" w-full h-full flex items-start justify-center  lg:ml-10 lg:mb-32 xl:ml-0 xl:mb-0">
+    <div class=" w-full h-full mb-10 flex items-start justify-center lg:ml-10 lg:mb-32 xl:ml-0 xl:mb-0">
       <div class="p-8 rounded-lg bg-gray-100 drop-shadow-md md:w-3/5  lg:w-full xl:w-2/3">
         <form class="">
           <div class="logo text-center mb-6 flex gap-4 justify-center">
@@ -53,8 +53,8 @@
       </div>
     </div>
   </div>
-  <div id="list-con" class="w-full h-full flex justify-start items-start mt-10 md:justify-center  lg:mt-0 lg:justify-center lg:items-center xl:mt-40 xl:items-start xl:justify-start">
-    <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full mb-20  md:w-3/4">
+  <div id="list-con" class="w-full h-full flex justify-start items-start  md:justify-center lg:mt-20 lg:justify-center lg:items-start xl:mt-4  xl:items-start xl:justify-start ">
+    <div class="h-fit p-6 bg-gray-100 rounded-lg shadow-md w-full md:w-3/4 xl:mt-32" >
       <div id="srch-bar" class="relative flex items-center my-2 md:mx-5">
         <input id="srch-input" type="text" placeholder="Filter Items" class="w-full p-2 border rounded" />
         <i id="srch-ico" class="absolute right-5 bx bx-search-alt text-gray-600 ml-2 text-lg"></i>
