--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shopping List</title>
   <link rel="stylesheet" href="buildcss.css">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="font.css">
   <link rel="shortcut icon" href="checklist.png" type="image/x-icon" />
   <link href="https://api.fontshare.com/v2/css?f[]=supreme@200,500&f[]=chillax@300,400,500&display=swap"
     rel="stylesheet" />
@@ -22,7 +22,7 @@
       <div class="p-8 rounded-lg bg-gray-100 drop-shadow-md md:w-3/5  lg:w-full xl:w-2/3">
         <form class="">
           <div class="logo text-center mb-6 flex gap-4 justify-center">
-            <h1 class="text-5xl text-gray-700">Shopping List</h1>
+            <h1 class="font-sans text-5xl text-gray-700">Shopping List</h1>
           </div>
           <input class="input-bx item-name w-full p-2 mb-4 border rounded" type="text" placeholder="Item Name"
             required />
